--- a/CodeAnalysis/Views/CodeCoverageView.xaml
+++ b/CodeAnalysis/Views/CodeCoverageView.xaml
@@ -6,6 +6,7 @@
     <UserControl.Resources>
         <converters:BackgroundColorConverter x:Key="BackgroundColorConverter"></converters:BackgroundColorConverter>
         <converters:ForegroundColorConverter x:Key="ForegroundColorConverter"></converters:ForegroundColorConverter>
+        <converters:VisibiltyConverter x:Key="VisibiltyConverter"></converters:VisibiltyConverter>
     </UserControl.Resources>
     <Grid>
         <Grid.RowDefinitions>
@@ -31,7 +32,7 @@
 
         <Button Grid.Row="0" Grid.RowSpan="2" Grid.Column="3" Width="80" Height="35" Content="Proceed" Command="{Binding ProceedCodeCoverageCommand}"></Button>
 
-        <Grid Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="5" Margin="10,20,10,10">
+        <Grid Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="5" Margin="10,20,10,10" Visibility="{Binding IsTreeVisible, Converter={StaticResource VisibiltyConverter}}">
             <core:TreeListView AllowsColumnReorder="True" ItemsSource="{Binding CodeCoverageTree}">
                 <core:TreeListView.ItemTemplate>
                     <HierarchicalDataTemplate ItemsSource="{Binding Children}" />
