User CMD.exe directly instead of NGit

--- a/CodeAnalysis/Views/ConfigurationView.xaml
+++ b/CodeAnalysis/Views/ConfigurationView.xaml
@@ -1,6 +1,10 @@
 ﻿<UserControl x:Class="CodeAnalysis.Views.ConfigurationView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:converters="clr-namespace:CodeAnalysis.Converters">
+    <UserControl.Resources>
+        <converters:VisibiltyConverter x:Key="VisibiltyConverter"></converters:VisibiltyConverter>
+    </UserControl.Resources>
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="50" />
@@ -18,16 +22,22 @@
         </Grid.ColumnDefinitions>
 
         <Label Grid.Row="0" Grid.Column="0" Content="Repository URL" VerticalAlignment="Center" Margin="10,0,0,0"></Label>
-        <TextBox Grid.Row="0" Grid.Column="1" Height="25" Text="{Binding RepositoryUrl}"></TextBox>
+        <TextBox Grid.Row="0" Grid.Column="1" Height="25" Text="{Binding RepositoryUrl}"
+                 IsEnabled="{Binding IsNotLoading}"></TextBox>
 
         <Label Grid.Row="1" Grid.Column="0" Content="Trunk Name" VerticalAlignment="Center" Margin="10,0,0,0"></Label>
-        <TextBox Grid.Row="1" Grid.Column="1" Height="25" Text="{Binding TrunkName}"></TextBox>
+        <TextBox Grid.Row="1" Grid.Column="1" Height="25" Text="{Binding TrunkName}"
+                 IsEnabled="{Binding IsNotLoading}"></TextBox>
 
         <Label Grid.Row="2" Grid.Column="0" Content="Branche Name" VerticalAlignment="Center" Margin="10,0,0,0"></Label>
-        <TextBox Grid.Row="2" Grid.Column="1" Height="25" Text="{Binding BrancheName}"></TextBox>
+        <TextBox Grid.Row="2" Grid.Column="1" Height="25" Text="{Binding BrancheName}"
+                 IsEnabled="{Binding IsNotLoading}"></TextBox>
 
-        <Button Grid.Row="0" Grid.RowSpan="3" Grid.Column="2" Width="140" Height="35" Content="Update repositories" Command="{Binding UpdateRepositoriesCommand}"></Button>
-        <Button Grid.Row="0" Grid.RowSpan="3" Grid.Column="3" Width="140" Height="35" Content="Proceed Code Metrics" Command="{Binding ProceedCodeMetricsCommand}"></Button>
-        <Button Grid.Row="0" Grid.RowSpan="3" Grid.Column="4" Width="140" Height="35" Content="Proceed Code Coverage" Command="{Binding ProceedCodeCoverageCommand}"></Button>
+        <Button Grid.Row="0" Grid.RowSpan="3" Grid.Column="2" Width="140" Height="35" Content="Update repositories" Command="{Binding UpdateRepositoriesCommand}"
+                Visibility="{Binding IsNotLoading, Converter={StaticResource VisibiltyConverter}}"></Button>
+        <Button Grid.Row="0" Grid.RowSpan="3" Grid.Column="3" Width="140" Height="35" Content="Proceed Code Metrics" Command="{Binding ProceedCodeMetricsCommand}"
+                Visibility="{Binding IsNotLoading, Converter={StaticResource VisibiltyConverter}}"></Button>
+        <Button Grid.Row="0" Grid.RowSpan="3" Grid.Column="4" Width="140" Height="35" Content="Proceed Code Coverage" Command="{Binding ProceedCodeCoverageCommand}"
+                Visibility="{Binding IsNotLoading, Converter={StaticResource VisibiltyConverter}}"></Button>
     </Grid>
 </UserControl>
