Remove useless code

--- a/CodeAnalysis/Views/ConfigurationView.xaml
+++ b/CodeAnalysis/Views/ConfigurationView.xaml
@@ -16,8 +16,6 @@
             <ColumnDefinition Width="120" />
             <ColumnDefinition Width="600" />
             <ColumnDefinition Width="200" />
-            <ColumnDefinition Width="200" />
-            <ColumnDefinition Width="200" />
             <ColumnDefinition Width="*" />
         </Grid.ColumnDefinitions>
 
@@ -33,13 +31,7 @@
         <TextBox Grid.Row="2" Grid.Column="1" Height="25" Text="{Binding BrancheName}"
                  IsEnabled="{Binding IsNotLoading}"></TextBox>
 
-        <Button Grid.Row="0" Grid.RowSpan="3" Grid.Column="2" Width="140" Height="35" Content="Update repositories" Command="{Binding UpdateRepositoriesCommand}"
+        <Button Grid.Row="0" Grid.RowSpan="3" Grid.Column="2" Width="140" Height="35" Content="Proceed analysis" Command="{Binding ProceedAnalysisCommand}"
                 Visibility="{Binding IsNotLoading, Converter={StaticResource VisibiltyConverter}}"></Button>
-        <Button Grid.Row="0" Grid.RowSpan="3" Grid.Column="3" Width="140" Height="35" Content="Proceed Code Metrics" Command="{Binding ProceedCodeMetricsCommand}"
-                Visibility="{Binding IsNotLoading, Converter={StaticResource VisibiltyConverter}}"></Button>
-        <Button Grid.Row="0" Grid.RowSpan="3" Grid.Column="4" Width="140" Height="35" Content="Proceed Code Coverage" Command="{Binding ProceedCodeCoverageCommand}"
-                Visibility="{Binding IsNotLoading, Converter={StaticResource VisibiltyConverter}}"></Button>
-
-        <TextBlock Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="6" Margin="10" Padding="10,5" Text="{Binding Path=ConsoleOutput}" Background="Black" Foreground="White" />
     </Grid>
 </UserControl>
