--- a/CodeAnalysis/Views/CodeMetricsView.xaml
+++ b/CodeAnalysis/Views/CodeMetricsView.xaml
@@ -38,7 +38,7 @@
                 Visibility="{Binding IsNotLoading, Converter={StaticResource VisibiltyConverter}}"></Button>
 
         <Grid Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="5" Margin="10,20,10,10" Visibility="{Binding IsTreeVisible, Converter={StaticResource VisibiltyConverter}}">
-            <core:TreeListView AllowsColumnReorder="True" ItemsSource="{Binding CodeMetricsTree}">
+            <core:TreeListView AllowsColumnReorder="True" ItemsSource="{Binding CodeMetricsTree}" MouseRightButtonUp="OpenFileDiff">
                 <core:TreeListView.ItemTemplate>
                     <HierarchicalDataTemplate ItemsSource="{Binding Children}" />
                 </core:TreeListView.ItemTemplate>
